// Licensed to Elasticsearch B.V. under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. Elasticsearch B.V. licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package elastic.apm.v1;

import "keyvalue.proto";

option go_package = "github.com/elastic/apm-data/model/modelpb";

message StacktraceFrame {
  repeated KeyValue vars = 1;
  optional uint32 lineno = 2;
  optional uint32 colno = 3;
  string filename = 4;
  string classname = 5;
  string context_line = 6;
  string module = 7;
  string function = 8;
  string abs_path = 9;
  string sourcemap_error = 10;
  Original original = 11;
  repeated string pre_context = 12;
  repeated string post_context = 13;
  bool library_frame = 14;
  bool sourcemap_updated = 15;
  bool exclude_from_grouping = 16;
}

message Original {
  string abs_path = 1;
  string filename = 2;
  string classname = 3;
  optional uint32 lineno = 4;
  optional uint32 colno = 5;
  string function = 6;
  bool library_frame = 7;
}
